Updated README file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Code Challenge</title>
+  <title>Event Guest List Manager</title>
   <link rel="stylesheet" href="index.css">
 </head>
 
